--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:  3.7
 install:
-    - pip install -r requirements.txt --use-mirrors
-    - pip install pyinstaller tornado --use-mirrors
+    - pip install -r requirements.txt
+    - pip install pyinstaller tornado
 script:
     - python setup.py bdist_wheel
     - pyinstaller novowrap/ui.py -n novowrap
