--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ install:
     - pip install pyinstaller tornado
       pip install --upgrade setuptools
     - python setup.py bdist_wheel
+    - pip install dist/*.whl
+    - python -m novowrap --help
 script:
     - pyinstaller novowrap/ui.py -n novowrap
     - pyinstaller novowrap/ui.py -n novowrap -w -y
-    - dist/novowrap/novowrap -help
