--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-os:
-    - linux
-    - osx
-    - windows
 matrix:
     include:
         - name: "Python 3.7 on Linux"
@@ -19,7 +15,7 @@ matrix:
               - choco install python
               - python -m pip install --upgrade pip
 install:
-      pip install --upgrade setuptools
+    - pip install --upgrade setuptools
     - pip install -r requirements.txt
     - pip install pyinstaller tornado
     - python setup.py bdist_wheel
