--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,14 @@ install:
 script:
     - pyinstaller novowrap/ui.py -n novowrap
     - pyinstaller novowrap/ui.py -n novowrap -w -y
+before_deploy:
+    - tar -cf novowrap-$TRAVIS_OS_NAME-$TRAVIS_TAG.zip dist/novowrap
 deploy:
     - provider: releases
-      local_dir: dist/novowrap
       api_key: $GITHUB_TOKEN
       skip_cleanup: true
+      file_glob: ture
+      file: novowrap*.zip
       draft: true
       on:
           tags: true
