--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_deploy:
     - pyinstaller novowrap/ui.py -n novowrap -w -y
     - dir || ls
     - tar -cf novowrap-$TRAVIS_OS_NAME-$TRAVIS_TAG.zip dist/novowrap
+    - dir || ls
 deploy:
     - provider: releases
       api_key: $GITHUB_TOKEN
