--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
     - pip3 install pyinstaller tornado
 before_deploy:
     - pyinstaller novowrap/ui.py -n novowrap
-    - pyinstaller novowrap/ui.py -n novowrap -w -y
+    - pyinstaller novowrap/ui.py -n novowrap -y
     - dir || ls
     - tar -czf novowrap-$TRAVIS_OS_NAME-$TRAVIS_TAG.tgz dist/novowrap
     - dir || ls
