--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
           language: shell
           env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
           before_install:
-              - choco install python
+              - choco install python --version=3.8.0
               - python -m pip install --upgrade pip
           after_install: 
               - python setup.py bdist_wheel
