--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
           before_install:
               - choco install python --version=3.8.0
               - python -m pip install --upgrade pip
+              - pip install pywin32
           after_install: 
               - python setup.py bdist_wheel
               - pip3 install dist/*.whl
