--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ matrix:
 install:
     - pip3 install --upgrade setuptools
     - pip3 install -r requirements.txt
-    - pip3 install tornado pyinstaller==4.0
+    - pip3 install tornado pyinstaller
 before_deploy:
     - pyinstaller novowrap/ui.py -n novowrap
     - pyinstaller novowrap/ui.py -n novowrap -y -w
